--- a/style.css
+++ b/style.css
@@ -10,5 +10,7 @@
 	text-align: center;
 	width: 100%;
 	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
-	font-weight: 200;
+
 }
+
+h1 {font-weight: 200;}
